--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@
   width: 100%;
 }
 
-.header .details {
+.header,
+.details {
   font-family: fantasy, cursive;
 }
 
@@ -49,11 +50,13 @@ ul {
   padding: 0px;
 }
 
-li, h3 {
+li,
+h3 {
   list-style: none;
 }
 
-input,button{
+input,
+button{
   outline: none;
 }
 
