--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ label[for="new-task"] {
 }
 
 /* Task list */
-.item {
+.list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -122,22 +122,22 @@ label[for="new-task"] {
   align-items: center;
 }
 
-.item > * {
+.list__item > * {
   vertical-align: middle;
 }
 
-.item > input[type="checkbox"] {
+.list__item > input[type="checkbox"] {
   margin: 0 10px;
 }
 
-.item > label {
+.list__item > label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-.item >  input[type="text"] {
+.list__item >  input[type="text"] {
   width: 226px;
 }
 
@@ -158,7 +158,7 @@ button.delete img:hover {
 }
 
 /* Edit Task */
-.item input[type=text] {
+.list__item input[type=text] {
   display: none;
 }
 
